Changelog

5.5.1

Create Big Cannons 5.5.1. A few critical fixes for 5.5.0 as well as some code changes.

Changes:
- Optimized entity bounds for big cannons and autocannons to optimize lighting
- Changed impact explosion queueing to better allow compatibility with Valkyrien Skies
- All Autocannon Recoil Springs on an autocannon now play the firing animation
 - Format for storing Autocannon Recoil Spring positions has changed, reassemble autocannons to fix any issues
Fixes:
- Fixed Trinkets compat crashing
- Fixed gas mask overlay rendering as solid color when holding Just Enough Guns firearm
- Fixed entity culling for big cannons and autocannons
- Fixed entity lighting
- Fixed contraption vector transforms
- Fixed big cannon projectiles spawning too far from barrel
- Fixed autocannon assembly shooting projectiles the wrong way
 - Added assembly failure message

===

5.5.0

"messi messi messi immens messi encara messi encara messi encara messi"

Create Big Cannons 5.5.0, with many bug fixes and QoL changes, as well as an aesthetic overhaul to many of the visual and sound effects.
Comes with version formatting change, but gameplay changes are otherwise not major.

Added:
- Added some config options to use subheadings in Create config screen
- Added durability and fuze position tooltip to Impact Fuze and Delayed Impact Fuze
- Added config to switch between cannon trail styles
- Added cannon trail particle
 - By default appears the same as campfire smoke
 - Particle texture definition can be changed
- Added new style for autocannon plumes (createbigcannons:autocannon_plume) and drop mortar plumes (createbigcannons:drop_mortar_plume) separate from big cannon plume (createbigcannons:big_cannon_plume)
 - Added separate clientside visibility config options for these plumes
- Added Drop Mortar Shell and Smoke Shell to "Fuzing Munitions" ponder
- Added Drop Mortar Shell, Fluid Shell, and Smoke Shell to Munitions ponder tag
- Added Cannon Loads ponder to Big Cartridge