@@ -4,6 +4,7 @@ import java.util.List;
 
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
+import net.minecraft.nbt.CompoundTag;
 import net.minecraft.world.InteractionHand;
 import net.minecraft.world.InteractionResult;
 import net.minecraft.world.entity.EntityType;
@@ -40,8 +41,8 @@ public class FluidShellBlock extends FuzedProjectileBlock<AbstractFluidShellBloc
 	@Override
 	public AbstractBigCannonProjectile getProjectile(Level level, List<StructureBlockInfo> projectileBlocks) {
 		FluidShellProjectile projectile = CBCEntityTypes.FLUID_SHELL.create(level);
-		projectile.setFuze(getFuze(projectileBlocks));
-		projectile.setTracer(getTracer(projectileBlocks));
+		projectile.setFuze(getFuzeFromBlocks(projectileBlocks));
+		projectile.setTracer(getTracerFromBlocks(projectileBlocks));
 		if (!projectileBlocks.isEmpty()) {
 			StructureBlockInfo info = projectileBlocks.get(0);
 			if (info.nbt != null) {
@@ -52,7 +53,18 @@ public class FluidShellBlock extends FuzedProjectileBlock<AbstractFluidShellBloc
 		return projectile;
 	}
 
-	@Override
+    @Override
+    public AbstractBigCannonProjectile getProjectile(Level level, ItemStack itemStack) {
+		FluidShellProjectile projectile = CBCEntityTypes.FLUID_SHELL.create(level);
+		projectile.setFuze(getFuzeFromItemStack(itemStack));
+		projectile.setTracer(getTracerFromItemStack(itemStack));
+		CompoundTag tag = itemStack.getOrCreateTag();
+		CompoundTag fluidTag = tag.getCompound("BlockEntityTag").getCompound("FluidContent");
+		projectile.setFluidStack(EndFluidStack.readTag(fluidTag));
+		return projectile;
+    }
+
+    @Override
 	public EntityType<? extends FluidShellProjectile> getAssociatedEntityType() {
 		return CBCEntityTypes.FLUID_SHELL.get();
 	}
@@ -63,11 +75,12 @@ public class FluidShellBlock extends FuzedProjectileBlock<AbstractFluidShellBloc
 			return InteractionResult.PASS;
 		ItemStack stack = player.getItemInHand(hand);
 		Direction facing = hit.getDirection();
-		boolean correctOrientation = facing != state.getValue(FACING);
+		Direction targetDir = this.isBaseFuze() ? state.getValue(FACING).getOpposite() : state.getValue(FACING);
+		boolean correctOrientation = facing == targetDir;
 
 		return this.onBlockEntityUse(level, pos, shell -> {
 			if (!stack.isEmpty() && correctOrientation) {
-				if ( shell.tryEmptyItemIntoTE(level, player, hand, stack, facing)) return InteractionResult.SUCCESS;
+				if (shell.tryEmptyItemIntoTE(level, player, hand, stack, facing)) return InteractionResult.SUCCESS;
 				if (shell.tryFillItemFromTE(level, player, hand, stack, facing)) return InteractionResult.SUCCESS;
 			}
 			return super.use(state, level, pos, player, hand, hit);
