@@ -3,6 +3,7 @@ package rbasamoyai.createbigcannons.munitions.big_cannon.mortar_stone;
 import java.util.List;
 
 import net.minecraft.world.entity.EntityType;
+import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplate.StructureBlockInfo;
 import rbasamoyai.createbigcannons.index.CBCEntityTypes;
@@ -20,7 +21,12 @@ public class MortarStoneBlock extends ProjectileBlock<MortarStoneProjectile> {
         return CBCEntityTypes.MORTAR_STONE.create(level);
     }
 
-	@Override
+    @Override
+    public AbstractBigCannonProjectile getProjectile(Level level, ItemStack itemStack) {
+        return CBCEntityTypes.MORTAR_STONE.create(level);
+    }
+
+    @Override
 	public EntityType<? extends MortarStoneProjectile> getAssociatedEntityType() {
 		return CBCEntityTypes.MORTAR_STONE.get();
 	}
