@@ -4,12 +4,14 @@ Changelog
 
 Create Big Cannons 5.5.1. A few critical fixes for 5.5.0 as well as some code changes.
 
-Changes:
+Added:
+[Development] - Added ability to get big cannon projectile from all big cannon projectile item stacks
+Changed:
 - Optimized entity bounds for big cannons and autocannons to optimize lighting
 - Changed impact explosion queueing to better allow compatibility with Valkyrien Skies
 - All Autocannon Recoil Springs on an autocannon now play the firing animation
  - Format for storing Autocannon Recoil Spring positions has changed, reassemble autocannons to fix any issues
-Fixes:
+Fixed:
 - Fixed Trinkets compat crashing
 - Fixed gas mask overlay rendering as solid color when holding Just Enough Guns firearm
 - Fixed entity culling for big cannons and autocannons
@@ -18,6 +20,7 @@ Fixes:
 - Fixed big cannon projectiles spawning too far from barrel
 - Fixed autocannon assembly shooting projectiles the wrong way
  - Added assembly failure message
+- Fixed Fluid Shell item filling
 
 ===
 
